force-app/main/default/objects/External_Gains_Losses__c/fields/Carried_Forward_Losses__c.field-meta.xml
<CustomField>
    <fullName>Carried_Forward_Losses__c</fullName>
    <inlineHelpText>Use positive figures</inlineHelpText>
    <label>Carried Forward Losses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>