force-app/main/default/objects/External_Gains_Losses__c/fields/Carried_Forward_Losses_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Carried_Forward_Losses_Y_N__c</fullName>
    <label>Carried Forward Losses (Y/N)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>