force-app/main/default/objects/External_Gains_Losses__c/fields/External_ISA_Contributions_Y_N__c.field-meta.xml
<CustomField>
    <fullName>External_ISA_Contributions_Y_N__c</fullName>
    <description>A value of &apos;Yes&apos; or &apos;No&apos; depending on if there have been any ISA contributions.</description>
    <label>ISA contributions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>