force-app/main/default/objects/External_Gains_Losses__c/fields/Further_detail_carried_forward_losses__c.field-meta.xml
<CustomField>
    <fullName>Further_detail_carried_forward_losses__c</fullName>
    <description>A chance to add any further detail required regarding carried forward losses.</description>
    <label>Further detail: carried forward losses</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>