force-app/main/default/objects/External_Gains_Losses__c/fields/Further_detail_Gains_Losses__c.field-meta.xml
<CustomField>
    <fullName>Further_detail_Gains_Losses__c</fullName>
    <description>A chance to add any further detail required regarding gains and losses.</description>
    <label>Further detail: gains &amp; losses</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>