force-app/main/default/objects/External_Gains_Losses__c/fields/Further_detail_ISAs__c.field-meta.xml
<CustomField>
    <fullName>Further_detail_ISAs__c</fullName>
    <label>Further detail (ISAs)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>