force-app/main/default/objects/External_Gains_Losses__c/fields/Gains_Losses_Realised_this_Year_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Gains_Losses_Realised_this_Year_Y_N__c</fullName>
    <description>A &apos;Yes&apos; or &apos;No&apos; value for if any gains or losses have been realised within this year.</description>
    <label>Gains/losses realised this year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>