force-app/main/default/objects/External_Gains_Losses__c/fields/Gains_Realised_int__c.field-meta.xml
<CustomField>
    <fullName>Gains_Realised_int__c</fullName>
    <label>Gains Realised (int)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>