force-app/main/default/objects/External_Gains_Losses__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <description>This is the associated household with this fact find.</description>
    <label>Household</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account selected in the household field must be a household. 

(Admin message: lookup filter criteria not met on Household on the Gains &amp; ISA contributions object)</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesHousehold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>External Gains &amp; ISAs (Household)</relationshipLabel>
    <relationshipName>External_Gains_ISAs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>