force-app/main/default/objects/External_Gains_Losses__c/fields/ISA_Contributions__c.field-meta.xml
<CustomField>
    <fullName>ISA_Contributions__c</fullName>
    <label>ISA Contributions (Ext)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>