force-app/main/default/objects/External_Gains_Losses__c/fields/Losses_Realised__c.field-meta.xml
<CustomField>
    <fullName>Losses_Realised__c</fullName>
    <description>The value of any losses realised.</description>
    <inlineHelpText>Use positive figures</inlineHelpText>
    <label>Losses realised (ext)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>