force-app/main/default/objects/External_Gains_Losses__c/fields/Net_Gains__c.field-meta.xml
<CustomField>
    <fullName>Net_Gains__c</fullName>
    <description>The value of any net gains.</description>
    <formula>Net_Gains_ext__c +  Net_Gains_int__c</formula>
    <label>Net gains</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>