force-app/main/default/objects/External_Gains_Losses__c/fields/Net_Gains_ext__c.field-meta.xml
<CustomField>
    <fullName>Net_Gains_ext__c</fullName>
    <description>The value of any net gain (ext).</description>
    <formula>Gains_Realised__c - Losses_Realised__c</formula>
    <label>Net gains (ext)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>