force-app/main/default/objects/External_Gains_Losses__c/fields/Net_Gains_int__c.field-meta.xml
<CustomField>
    <fullName>Net_Gains_int__c</fullName>
    <formula>Gains_Realised_int__c -  Losses_Realised_int__c</formula>
    <label>Net Gains (int)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>