force-app/main/default/objects/External_Gains_Losses__c/fields/OW_stop_internal_change_processing__c.field-meta.xml
<CustomField>
    <fullName>OW_stop_internal_change_processing__c</fullName>
    <description>This field, if changed, will be used by other configuration like validation rules and flows to determine whether a change can be excluded form particular rules.</description>
    <label>Stop internal change processing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>