force-app/main/default/objects/External_Gains_Losses__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A lookup to the owner of the account.</description>
    <label>Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>External Gains &amp; ISAs (Owner)</relationshipLabel>
    <relationshipName>External_Gains_ISAs1</relationshipName>
    <type>Lookup</type>
</CustomField>