force-app/main/default/objects/External_Gains_Losses__c/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <description>This fields receives the Session ID as part of the snapshot function.</description>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>