force-app/main/default/objects/External_Gains_Losses__c/fields/Tax_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Tax_Year_End__c</fullName>
    <description>Used as a trigger for the scheduled action that will create the following record for the next tax year.</description>
    <label>Tax year end</label>
    <type>Date</type>
</CustomField>