force-app/main/default/objects/External_Gains_Losses__c/fields/Total_ISA_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Total_ISA_Contributions__c</fullName>
    <formula>ISA_Contributions__c +  Gains_Realised_int__c</formula>
    <label>Total ISA Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>