force-app/main/default/objects/External_Gains_Losses__c/validationRules/noNegatives.validationRule-meta.xml
<ValidationRule>
    <fullName>noNegatives</fullName>
    <active>true</active>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
(OR( 
 Carried_Forward_Losses__c &lt; 0, 
 Losses_Realised__c &lt; 0,
 Losses_Realised_int__c &lt; 0
))</errorConditionFormula>
    <errorMessage>Use positive figures in there fields.</errorMessage>
</ValidationRule>