force-app/main/default/objects/External_Gains_Losses__c/validationRules/validationsOutstanding.validationRule-meta.xml
<ValidationRule>
    <fullName>validationsOutstanding</fullName>
    <active>true</active>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 
&amp;&amp;
(Household__r.Fact_Find_Validations_Outstanding__c = true
&amp;&amp; 
NOT(ISNEW())
&amp;&amp;
NOT(ISCHANGED( OW_stop_internal_change_processing__c )))</errorConditionFormula>
    <errorMessage>There are Client Profile Updates that need to be validated before you can edit this record</errorMessage>
</ValidationRule>